<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_control</name>
  <version>0.0.1</version>
  <description>Arm control node and motor controller for capstone robot arm</description>
  <maintainer email="bdacosta@andrew.cmu.edu">bevisoccer</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>hand_interfaces</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
